--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
 <body>
+<header>
     <section class=" bg-warning text-dark">
         <div class="container">
             <div class="row row-cols-2">
@@ -31,10 +32,10 @@
             </div>
         </div>
     </section>
-    <section class="two">
+    <section>
         <div class="container">
             <div class="row gx-5">
-              <div class="col">
+              <div class="col part">
                <div class="mt-5 bg-light">
                 <div class="row justify-content-evenly">
                     <div class="col-4">
@@ -65,13 +66,14 @@
                   </div>
                </div>
               </div>
-              <div class="col">
+              <div class="col part">
                 <div class="mt-5 bg-light"><img src="XMLID 1.png" alt=""></div>
               </div>
             </div>
-          </div>>
+          </div>
     </section>
-           
+</header>
+<main>          
     <section class="container mt-5">
         <h3>Casual backpack</h3>
         <div class="row row-cols-1 row-cols-md-3 g-4" >
@@ -177,11 +179,14 @@
         </div>
         </div>
     </section>
+</main> 
+<footer>  
     <section>
         <div class="text-center mt-5">
             <small>©2021 Bag shopping center, Narsingdi</small>
         </div>
     </section>
+</footer>    
 </body>
 </html>
 	
